--- a/phtc/templates/quizblock/quizblock.html
+++ b/phtc/templates/quizblock/quizblock.html
@@ -8,7 +8,7 @@
   <script>
   jQuery(document).ready(function(){
 	  jQuery("button.reading-exercise").on('click', function(evt){
-		  jQuery(this).parent().parent().find("div.question_response").css('display','block');
+		  jQuery(this).parent().parent().parent().find("div.question_response").css('display','block');
 	  });
 	  
   }); // end doc.ready
