enable next button for logic modle

--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -1,8 +1,11 @@
 h1.section-label-header,
-li.next,
 li.previous,
 #sidebarleft {
     display:none;
+}
+
+li.next {
+	display:block;
 }
 
 header#masthead {
