Optimize Dashboard Rendering
The PHTC staging build is timing out on the mediacheck step. The speed bump is the initial hierarchy descendant rendering. (Subsequent views are cached, and significantly speedier)
* Opt for <div> rather than <ul><li>. This eliminates the need for the get_children/is_last_child queries.
* Style the divs based on menu depth, e.g. menu-4 has margin-left: 20px;
* Eliminate the section highlight as it's not applicable in this screen

Metrics
Before: 640 queries / 7562ms
After: 450 queries / 4828ms

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -885,3 +885,19 @@ margin: 0 7px 0 -2px !important;
 .comp_descriptor .comp_criteria {
     width: 340px;
 }
+
+.dropdown-menu .menu-4 {
+    margin-left: 20px;
+}
+.dropdown-menu .menu-5 {
+    margin-left: 40px;
+}
+.dropdown-menu .menu-6 {
+    margin-left: 60px;
+}
+
+.dropdown-menu .menu-item a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #0088cc;
+}
