--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -9,39 +9,47 @@
   <meta name="author" content="CCNMTL">
 
   {% compress css %}
-  <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
-  {% comment %} <link href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">{% endcomment %}
-  <link href="{{STATIC_URL}}css/main.css?site=phtc" rel="stylesheet">
+    <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
+    {% comment %} <link href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css" rel="stylesheet"> {% endcomment %}
+    <link href="{{STATIC_URL}}css/main.css?site=phtc" rel="stylesheet">
   {% endcompress %}
-	<link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" type="image/x-icon" />
-	{% block css %}{% endblock %}
+  <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" type="image/x-icon" />
+  {% block css %}{% endblock %}
   <script src="{{STATIC_URL}}js/jquery-1.7.2.min.js"></script>
 
-<!-- shield -->
-<link rel="stylesheet" href="{{STATIC_URL}}js/shield-1.0/shield.css" type="text/css" media="all" />
-<script src="{{STATIC_URL}}js/shield-1.0/browserdetect.js" type="text/javascript" language="javascript"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/shield-1.0/shield.js"></script>
-<script type="text/javascript">
-/* Select from list: Chrome, Firefox, Safari, MSIE */
-shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
-</script>
-
+  <!-- shield -->
+  <link rel="stylesheet" href="{{STATIC_URL}}js/shield-1.0/shield.css" type="text/css" media="all" />
+  <script src="{{STATIC_URL}}js/shield-1.0/browserdetect.js" type="text/javascript" language="javascript"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/shield-1.0/shield.js"></script>
+  <script type="text/javascript">
+    /* Select from list: Chrome, Firefox, Safari, MSIE */
+    shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
+  </script>
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
   <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-	{% block feeds %}{% endblock %}
+  {% block feeds %}{% endblock %}
 </head>
+
 <body{% block noleftsidebar %}{% endblock %}>
 
-<div class="container">
-{% block topnavbar %}
+  <div class="container">
+  {% block topnavbar %}
     <div class="navbar">
       <div class="navbar-inner">
         <ul class="nav">
-          <li><a class="brand" href="/">{% if request.user.is_anonymous %}Home{% else %}My Dashboard{% endif %}</a></li>
+          <li>
+            <a class="brand" href="{{menu_base}}{{module.get_absolute_url}}">
+              {% if request.user.is_anonymous %}
+                {{module.label}}
+              {% else %}
+                My Dashboard
+              {% endif %}
+            </a>
+          </li>
           {% block topnavbarleftitems %}{% endblock %}
         </ul>
         <div class="usernav">
