--- a/phtc/templates/pageblocks/imageblock.html
+++ b/phtc/templates/pageblocks/imageblock.html
@@ -1,60 +1,28 @@
 {% load markup %}
-{% load thumbnail %}
 
 {% if block.lightbox %}
-<style type="text/css">
-.bigModal .modal-dialog {
-   width:960px;
-}
-</style>
-{% comment %}
-<div class="modal bigModal" id="image-lightbox-{{block.id}}">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close-btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				
-				<h3 class="modal-title">{{block.alt}}</h3>
-			</div>
-			<div class="modal-body">
-				<img alt="{{block.alt}}" src="{% if img_src %}{{img_src}}{% else %}{% thumbnail block.image 900x900 %}{% endif %}" />
-				<div class="caption">
-					{{block.caption|markdown}}
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-{% endcomment %}
-<ul class="thumbnails">
-	<li class="span3">
-		<div class="thumbnail">
-			<a data-toggle="modal" href="#image-lightbox-{{block.id}}" data-target="#image-lightbox-{{block.id}}">
-				<img alt="{{block.alt}}" 
-						 src="{% if img_src %}{{img_src}}{% else %}{% thumbnail block.image 200x200 %}{% endif %}" />
-			</a>
-			<div class="caption">
-				{{block.caption|markdown}}
-			</div>
-		</div>
-	</li>
-</ul>
-{% comment %}
-<script>
-jQuery(document).ready(function(){
-	jQuery('.bigModal').modal('show');
-	var closeBtn = jQuery('.close-btn');
-	closeBtn.click(function(e){
-		jQuery('.bigModal').modal('close');
-	});
-})
-</script>
-{% endcomment %}
+    <style type="text/css">
+    .bigModal .modal-dialog {
+       width:960px;
+    }
+    </style>
+    
+    <ul class="thumbnails">
+    	<li class="span3">
+    		<div class="thumbnail">
+    			<a data-toggle="modal" href="#image-lightbox-{{block.id}}" data-target="#image-lightbox-{{block.id}}">
+    				<img alt="{{block.alt}}"  src="{{MEDIA_URL}}{{block.image.name}}" />
+    			</a>
+    			<div class="caption">
+    				{{block.caption|markdown}}
+    			</div>
+    		</div>
+    	</li>
+    </ul>
+
 {% else %}
-
-<img class="img-responsive" alt="{{block.alt}}" src="/uploads/{{ block.image}}" />
-<div class="caption">
-{{block.caption|markdown}}
-</div>
+    <img class="img-response" alt="{{block.alt}}" src="{{MEDIA_URL}}{{block.image.name}}" />
+    <div class="caption">
+        {{block.caption|markdown}}
+    </div>
 {% endif %}
-
