S3 migration * remove sorl dependencies * add context process for MEDIA_URL * add/update requirements

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -37,6 +37,10 @@ body > .container
 #content { min-height: 100%; }
 .navbar-top { margin-bottom: 0px; }
 
+.navbar .brand {
+    width: 100% !important;
+}
+
 #primarynav .navbar-inner
 {
     background-color: blue;
