--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -86,19 +86,26 @@
 {% endblock %}
 
 {% block content-nav %}
-<ul class="pager">
-{% ifnotequal module.id section.get_previous.id %}
-  {% if section.get_previous %}
-    <li class="previous">
-      <a href="{{section.get_previous.get_absolute_url}}">&larr; {{section.get_previous.label}}</a>
-    </li>
-  {% endif %}
-{% endifnotequal %}
+  <ul class="pager">
+    {% ifnotequal module.id section.get_previous.id %}
+      {% if section.get_previous %}
+        <li class="previous">
+          <a href="{{section.get_previous.get_absolute_url}}">&larr; {{section.get_previous.label}}</a>
+        </li>
+      {% endif %}
+    {% endifnotequal %}
 
-{% if section.get_next %}
-{% with section.get_next as next_section %}
-<li class="next"><a id="next_section" href="{{section.get_next.get_absolute_url}}">{{section.get_next.label}} &rarr;</a></li>
-{% endwith %}
-{% endif %}
-</ul>
+    {% if section.get_next %}
+      {% with section.get_next as next_section %}
+        {% if next_section.depth == 2  %}
+        {% else %}
+        <li class="next">
+        <a id="next_section" href="{{section.get_next.get_absolute_url}}">
+        {{section.get_next.label}} &rarr;
+        </a>
+        </li>
+        {% endif %}
+      {% endwith %}
+    {% endif %}
+  </ul>
 {% endblock %}
