--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -34,7 +34,6 @@
 </head>
 
 <body{% block noleftsidebar %}{% endblock %}>
-
   <div class="container">
   {% block topnavbar %}
     <div class="navbar">
@@ -42,7 +41,13 @@
         <ul class="nav">
           <li>
             {% block brand %}
-                <a class="brand" href="/">{% if request.user.is_anonymous %}Home{% else %}My Dashboard{% endif %}</a>
+                <a class="brand"
+                href="{{module.get_first_leaf.get_absolute_url}}">
+                {% if request.user.is_anonymous %}
+                  Home
+                {% else %}
+                  My Dashboard
+                {% endif %}</a>
             {% endblock %}
           </li>
           {% block topnavbarleftitems %}{% endblock %}
@@ -75,7 +80,7 @@
 {% block masthead %}
     <header id="masthead">
         <h1>
-          <a href="{{menu_base}}{{module.get_absolute_url}}" title="Return to {% if request.user.is_anonymous %}Home Page{% else %}My Dashboard{% endif %}">
+          <a href="{{module.get_first_leaf.get_absolute_url}}" title="Return to {% if request.user.is_anonymous %}Home Page{% else %}My Dashboard{% endif %}">
             <span>
               Return to {% if request.user.is_anonymous %} Home Page {% else %} My Dashboard {% endif %} 
             </span>
@@ -91,30 +96,6 @@
             </a>
         </h4>
         {% block primarynav %}
-        {% comment %}
-        <div class="navbar" id="primarynav">
-          <div class="navbar-inner">
-            <div class="container">
-              <ul class="nav">
-                {% block primarynavtabs %}
-                {% for section in modules %}
-                <li{% ifequal section.id module.id %} class="active"{% endifequal %}>
-                  <a href="{{section.get_absolute_url}}">
-                    {{section.label}}
-                  </a>
-                </li>
-                {% endfor %}
-                {% endblock %}
-                {% block primarynavtabsextra %}{% endblock %}
-              </ul>
-            
-              <ul class="nav pull-right">
-                {% block primarynavrightextra %}{% endblock %}
-              </ul>
-            </div>
-          </div>
-        </div>
-      {% endcomment %}
       {% endblock %}
     </header><!-- masthead -->
 {% endblock %}
@@ -137,10 +118,7 @@
               </ul>
              <hr />
             {% endifequal %}
-            
           {% endif %}
-
-
 
                 {% block pagetitle %}{% endblock %}
                 {% block content %}{% endblock %}
