--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -42,12 +42,12 @@
           <li>
             {% block brand %}
                 <a class="brand"
-                href="{{module.get_first_leaf.get_absolute_url}}">
+                href="">
                 {% if request.user.is_anonymous %}
-                  Home
                 {% else %}
                   My Dashboard
-                {% endif %}</a>
+                {% endif %}
+                </a>
             {% endblock %}
           </li>
           {% block topnavbarleftitems %}{% endblock %}
@@ -80,10 +80,7 @@
 {% block masthead %}
     <header id="masthead">
         <h1>
-          <a href="{{module.get_first_leaf.get_absolute_url}}" title="Return to {% if request.user.is_anonymous %}Home Page{% else %}My Dashboard{% endif %}">
-            <span>
-              Return to {% if request.user.is_anonymous %} Home Page {% else %} My Dashboard {% endif %} 
-            </span>
+          <a href="" title="">
           </a>
         </h1>
         <h4 id="logo-ccnmtl">
