Clarify	url routing
* site root redirects to region2phtc.org
* /dashboard/ requires login & lists all courses
* /reports/ requires login & shows reports to staff only
* removing /dashboard_panel/ as it appears to be non-functional

fix conflict

cleanup header

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -51,16 +51,7 @@
           {% block usernav %}
             {% if request.user.is_anonymous %}
             {% else %}
-              Hello 
-              <span class="user_profile" rel="tooltip" title="View/Edit my profile">
-                <a href="/profile/">
-                  {% if request.user.last_name %}
-                    {{request.user.first_name}}
-                  {% else %}
-                    {{request.user.username}}
-                  {% endif %}
-                </a>
-              </span>
+              <a href="/dashboard/">Dashboard</a>
               <a id="login-logout" href="/accounts/logout/?next=/accounts/login/" class="btn btn-small btn-danger">
                 Log out
               </a>
@@ -117,10 +108,6 @@
     </div><!-- content -->
 
 {% block footer %}
-  {% comment %}<footer class="footer navbar-fixed-bottom hidden-phone">
-  <img src="{{STATIC_URL}}img/logo_ccnmtl_sidebar.gif" class="printonly pull-right" />
-  </footer>
-  {% endcomment %}
   <footer class="footer">
 	<ul>
 	  <li><a href="/about/">About</a></li>
