--- a/phtc/templates/admin/login.html
+++ b/phtc/templates/admin/login.html
@@ -1,34 +1,49 @@
-{% extends "base.html" %}
+{% extends "admin/base_site.html" %}
+{% load i18n admin_static %}
+
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />{% endblock %}
+
+{% block bodyclass %}{{ block.super }} login{% endblock %}
+
+{% block usertools %}{% endblock %}
+
+{% block nav-global %}{% endblock %}
+
+{% block content_title %}{% endblock %}
+
+{% block breadcrumbs %}{% endblock %}
+
 {% block content %}
+{% if error_message %}
+<p class="errornote">{{ error_message }}</p>
+{% endif %}
+<div id="content-main">
+<form method="get" action="{{CAS_BASE}}cas/login">
+<input type="hidden" name="destination" value="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/accounts/caslogin/?next=/admin/&this_is_the_login_form=1" />
+<p>If you have a Columbia UNI, you already have an account and can
+login through WIND with it</p>
+<input type="submit" value="Here" />
+</form>
+<p>otherwise: </p>
 
-<h2>Choose a Login Option...</h2>
-
-<form method="get" action="{{CAS_BASE}}cas/login" class="well">
-  <input type="hidden" name="service" value="cnmtl_full_np" />
-  <input type="hidden" name="destination" value="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/accounts/caslogin/?next=/admin/&amp;this_is_the_admin_form=1" />
-  <p>
-  If you have a Columbia University Network ID
-        (UNI)... 
-  </p>
-    <input type="submit" value="LOG IN" class="btn btn-primary"/>
+<form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+  <div class="form-row">
+    <label for="id_username">{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
+  </div>
+  <div class="form-row">
+    <label for="id_password">{% trans 'Password:' %}</label> <input type="password" name="password" id="id_password" />
+    <input type="hidden" name="this_is_the_login_form" value="1" />
+    <input type="hidden" name="post_data" value="{{ post_data }}" /> {#<span class="help">{% trans 'Have you <a href="/password_reset/">forgotten your password</a>?' %}</span>#}
+  </div>
+  <div class="submit-row">
+    <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}" />
+  </div>
 </form>
 
-<form method="post" action="." class="well">
-  {% csrf_token %}
-  <p>
-    If you have a project account...
-  </p>
-  <label for="id_username">Username: {{ form.username }}</label>
-  <label for="id_password">Password: {{ form.password }}</label>
-
-  <input type="hidden" name="this_is_the_login_form" value="1" />
-  <input type="hidden" name="post_data" value="{{ post_data }}" />
-
-  <input type="submit" value="LOG IN" class="btn btn-primary" />
-  <input type="hidden" name="next" value="/admin/" />
-</form>
-
+<script type="text/javascript">
+document.getElementById('id_username').focus()
+</script>
+</div>
 {% endblock %}
-
 
 
