--- a/quizblock/templates/admin/quizblock/quiz/change_form.html
+++ b/quizblock/templates/admin/quizblock/quiz/change_form.html
@@ -1,8 +1,8 @@
 {% extends "admin/base_site.html" %}
-{% load i18n admin_modify adminmedia %}
+{% load i18n admin_modify staticfiles %}
 
 {% block extrahead %}{{ block.super }}
-{% url admin:jsi18n as jsi18nurl %}
+{% url 'admin:jsi18n' as jsi18nurl %}
 <script type="text/javascript" src="{{ jsi18nurl|default:"../../../jsi18n/" }}"></script>
 {{ media }}
 
@@ -85,7 +85,7 @@
 
 {% endblock %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin' %}css/forms.css" />{% endblock %}
 
 {% block coltype %}{% if ordered_objects %}colMS{% else %}colM{% endif %}{% endblock %}
 
