--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -106,7 +106,6 @@
 
 </div><!-- container -->
 
-
 <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
 {% block js %}{% endblock %}
@@ -150,5 +149,18 @@ if(window.phtcInputFormCheck){
     <p>This site was last updated on: <b>{{STAGING_DEPLOY_TIME}}</b></p>
   </div>
 {% endif %}
+
+{% if GA_CODE %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{GA_CODE}}', 'auto');
+      ga('send', 'pageview');
+    </script>
+{% endif %}
+
 </body>
 </html>
