Feature flag: building logic models

--- a/phtc/templates/logic_model/logic_model2.html
+++ b/phtc/templates/logic_model/logic_model2.html
@@ -1,7 +1,4 @@
-{% load waffle_tags %}
-{% flag "building-logic-models-2" %}
-    {% include "logic_model/logic_model2.html" %}
-{% else %}
+All the new stuff goes here
 <div class="logic-model-container">
 	<div id="phase_container">
 
@@ -32,4 +29,3 @@
         });
     });
 </script>
-{% endflag %}
