--- a/media/css/logic_model.css
+++ b/media/css/logic_model.css
@@ -375,11 +375,11 @@ div.table-toolbar {
     cursor: pointer;
     height: 40px;
     z-index: 1;
-    background: transparent url('/media/img/caret_close.png') 10px 12px no-repeat;
+    background: transparent url('../img/caret_close.png') 10px 12px no-repeat;
 }
 
 .scenario-block .active {
-    background: transparent url('/media/img/caret_open.png') 10px 12px no-repeat;
+    background: transparent url('../img/caret_open.png') 10px 12px no-repeat;
 }
 
 .scenario-criteria {
