changed the call of the logic model css

--- a/phtc/templates/logic_model/block_css.html
+++ b/phtc/templates/logic_model/block_css.html
@@ -1,2 +1,2 @@
 <!-- Le styles -->
-<link href="/_logic_model/media/css/logic_model.css" rel="stylesheet">
+<link href="{{STATIC_URL}}css/logic_model.css" rel="stylesheet">
