--- a/phtc/templates/logic_model/subtemplates/initial_scenario_choice.html
+++ b/phtc/templates/logic_model/subtemplates/initial_scenario_choice.html
@@ -1,4 +1,6 @@
 <div class="logic-model-initial-scenario_choice">
 	<div class="logic-model-initial-scenario-list"></div>
-	<div class="btn btn-primary btn-large next_phase">&rarr;</div>
+	<!-- Not sure what this does
+	<div class="btn btn-primary btn-large somestuff next_phase">&rarr;</div>
+	-->
 </div>
