Placed loading-overlay. Loading time is short, but at least no there is no weird content replacement blip

--- a/media/css/logic_model.css
+++ b/media/css/logic_model.css
@@ -404,3 +404,16 @@ div.table-toolbar {
 .pull-center {
     text-align: center;
 }
+
+.loading-overlay
+{
+	position: absolute;
+	display: block;
+	top: 0;
+	left: 0;
+	background-color: #fff;
+	height: 100%;
+	width: 100%;
+	font-size: larger;
+	font-weight: bold;
+}
