--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -2,6 +2,7 @@
 {% flag "building-logic-models-2" %}
     {% include "logic_model/logic_model2.html" %}
 {% else %}
+<div class="loading-overlay">Loading...</div>
 <div class="logic-model-container">
 	<div id="phase_container">
 
