Retstored the bottom navigation, and added alerts to warn users if activity is incomplete

--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -36,4 +36,4 @@
 
 
 <!-- the whole table goes here: -->
-<div class="logic-model-columns"></div>
+<div class="logic-model-columns clearfix"></div>
